REMOVE MAIN CAROUSEL

--- a/css/fasilitas.css
+++ b/css/fasilitas.css
@@ -99,7 +99,7 @@ body {
     flex-direction: row;
 }
 .container-top .fasilitas-1 .child-1{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     justify-content: center;
     margin: 0 auto;
     width: 50%;
@@ -113,11 +113,11 @@ body {
     object-fit: cover;
     height: 540px;
     max-width: 540px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .container-top .fasilitas-1 .child-2{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding: 0 30px;
     display: flex;
     align-items: center;
@@ -141,7 +141,7 @@ body {
     flex-direction: row;
 }
 .container-top .fasilitas-2 .child-1{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     justify-content: center;
     margin: 0 auto;
     width: 50%;
@@ -155,10 +155,10 @@ body {
     object-fit: cover;
     height: 540px;
     max-width: 540px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 .container-top .fasilitas-2 .child-2{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding: 0 30px;
     display: flex;
     align-items: center;
