--- a/css/highlight.css
+++ b/css/highlight.css
@@ -106,7 +106,7 @@ body {
     width: 50%; 
     box-sizing: border-box;
     padding: 5px;
-    /* max-width: 550px; */
+    max-width: 550px;
     /* transition: transform 0.3s ease; */
     
 }
