add footer on fasilitas and highlight
unsolved bug
on top hamburg btn navbar half clicked
style.css line 775 error
can solve by change margin - top to -100 but it comes with sacrifice which cropping bg main photo height
discuss with eksel

--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ body {
     width: 315px;
     word-wrap: break-word;
     vertical-align: middle;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 .container-icon .grandparent .parent .child p{
@@ -771,6 +771,8 @@ footer{
     .container-satu{
         background-color: unset;
         margin-top: -50px;
+        /* causing eror on navbar sticky on top 
+        error only occur while on top after scroll down its fine*/
     }
     .container-satu .btn-centered .btn-contact {
         width: 180px;
