--- a/css/highlight.css
+++ b/css/highlight.css
@@ -133,6 +133,65 @@ body {
     /* scale(1.1) */
 }
 
+/* footer */
+footer{
+    margin-top: 100px;
+    position: unset;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #ffffff;
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 40px;
+    color: #000000;
+}
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content .foot-logo img{
+    height: 60px;
+}
+.footer-content p{
+    max-width: 700px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0 3px -55px;
+}
+.socials li{
+    margin: unset;
+    padding: 5px;
+    border: 1.5px solid rgb(117, 117, 117, 15%);
+    margin-left: 20px;
+    border-radius: 100px;
+}
+.socials a{
+    text-decoration: none;
+    color: #000000;
+}
+.footer-bottom{
+    background: #ffffff;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
 
 
 
